k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zero-trust-pdp-pep
  namespace: zero-trust-system
  labels:
    app: zero-trust-portal
    tier: core-engine
spec:
  replicas: 2
  selector:
    matchLabels:
      app: zero-trust-portal
  template:
    metadata:
      labels:
        app: zero-trust-portal
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        runAsGroup: 10001
        fsGroup: 10001
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: pdp-engine
          image: zero-trust-portal:1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8001
              name: http
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            capabilities:
              drop:
                - ALL
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          livenessProbe:
            httpGet:
              path: /
              port: 8001
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /
              port: 8001
            initialDelaySeconds: 5
            periodSeconds: 10
