k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zero-trust-service
  namespace: zero-trust-system
  labels:
    app: zero-trust-portal
spec:
  type: ClusterIP
  ports:
    - port: 8001
      targetPort: 8001
      name: http-pdp
  selector:
    app: zero-trust-portal
